adding footer and some small edits

--- a/1-MyWork_ResponsiveDesign/index.html
+++ b/1-MyWork_ResponsiveDesign/index.html
@@ -185,6 +185,14 @@
         </div>
     </div>
     <!-- end information -->
+    <!-- start footer  -->
+    <div class="footer">
+        <div class="container flex-row-spacearound">
+            <div class="copyrite">Copyrite to Ahmed Mohsen &copy;</div>
+            <div class="design">Designed By Ahmed Mohsen Sep 2023</div>
+        </div>
+    </div>
+    <!-- end footer  -->
     <script src="main.js"></script>
 </body>
 </html>
